--- a/package.json
+++ b/package.json
@@ -6,11 +6,17 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "evergreen-ui": "^6.10.1",
+    "moment": "^2.29.3",
     "react": "^18.2.0",
+    "react-currency-input-field": "^3.6.4",
     "react-dom": "^18.2.0",
+    "react-otp-input": "^2.4.0",
+    "react-paginate": "^8.1.3",
     "react-query": "^2.1.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.0.5",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
